# clang-tidy-pr-comments

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  action.py  action.yml  action_launcher.bash  entrypoint.sh  requirements.txt  run_action.py
.github/: dependabot.yml
.github/workflows/: actions-tagger.yaml  black.yaml  clang-tidy.yml  github-release.yaml  pull-request-tests.yaml  pull_request_tests.yaml  pylint.yaml  shellcheck.yaml
smartcar/src/sensors/distance/infrared/analog/sharp/: GP2D120.cpp
tests/: CMakeLists.txt  main.cpp
